# AutoSolveAI-Verified-Remediation-Sandbox

./: .env.example  .gitignore  BUILD_LOG.md  DEMO_SCRIPT.md  DEVPOST_PROJECT_STORY.md  DEVPOST_SUBMISSION.md  LICENSE  README.md  SUBMISSION.md  YOUTUBE_METADATA.md  pyproject.toml  requirements.txt
artifacts/: README.md  autosolve_verified_remediation_demo.webm  page@7a5c99af42e5fff9abe7724a92054fa2.webm
tests/: test_adapters.py  test_api.py  test_cli.py  test_contracts.py  test_evidence.py  test_expanded_system.py  test_orchestrator.py  test_planner.py  test_release_check.py  test_reporting.py  test_sandbox.py  test_security_metrics.py  test_server_ui.py  test_simulation_replay.py  test_storage.py
verified_sandbox/: __init__.py  adapters.py  capabilities.json  capability_router.py  cli.py  contracts.py  engine.py  evidence.py  execution_runtime.py  incident_intake.py  learning.py  metrics.py  model_selection.py  models.py  orchestrator.py  plan_envelope.py  planner.py  policy.py  policy_engine.py  registry.py  release_check.py  replay.py  reporting.py  runbook.py  sandbox.py  scenarios.py  security.py  server.py  simulation.py  storage.py  target_resolution.py  ui.py  verification_engine.py  worker.py
