[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "verified-remediation-sandbox"
version = "0.2.0"
description = "A clean-room, synthetic incident remediation command center"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
verified-remediation = "verified_sandbox.cli:main"
